Add --enable-native-access=ALL-UNNAMED to the start-up scripts